# log-fn

./: Cargo.toml  README.md
src/: arg.rs  attrs.rs  config.rs  lib.rs
tests/: logfn_pre.rs
