[package]
name = "logfn"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"
repository = "https://github.com/AtsukiTak/logfn"
keywords = ["macro", "log", "fn"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "provides the logfn attribute macro for inserting logging code into your function."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
log = "0.4"
